Revision history for Perl extension POE::Component::SSLify.

{{$NEXT}}

1.002
	Released: 2011-02-20 04:23:48 UTC

	Add SSLify_GetSSL to get the Net::SSLeay object, thanks mordy@irc!

1.001
	Released: 2011-02-13 18:11:07 UTC

	Fixed the Net::SSLeay import code, thanks CPANTesters!

1.000
	Released: 2011-02-13 00:06:14 UTC

	Converted to Dist::Zilla for the release process!
	Add a test for in-situ sslification, thanks mordy@irc!
	Add prereq for IO::Handle 1.28 to get sane $socket->blocking( 0 ) behavior on MSWin32
	Remove crufty old code for nonblocking and use $socket->blocking() instead

0.20

	Split up the simple.t test into 2 tests for clarity, and added more diag messages for renegotiate, thanks HMBRAND!

0.19

	Fixed a warning generated by POE::Component::Client::TCP in t/simple.t, thanks HMBRAND!

0.18

	Bumped POE dep to at least 1.267 for t/simple.t - thanks CPANTesters!
	Minor typo fixes in POD/Build.PL

0.17

	Fixed the t/simple.t test to PASS on FreeBSD because Net::SSLeay::renegotiate was buggy on it, thanks CPANTesters!
	Added note about OpenSSL functions in the POD.

0.16

	Updated the nonblocking code to be production-ready, thanks ASCENT!
	Removed the NONBLOCKING() sub, this module is now always nonblocking.
	Added more tests, thanks ASCENT!
	Added "mylib/example.crt" and "mylib/example.key" for testing, thanks ASCENT!
	Misc kwalitee and POD fixes.
	Bumped Net::SSLeay prereq to 1.36 so we have the latest SSL stuff to ensure sanity :)

0.15

	Added "examples/serverclient.pl" to track down same-process sslification problems, thanks LotR!

	Applied patch from BinGOs to support passing custom $ctx for Server_SSLify, thanks! RT#43018

	Switched over to Test::Apocalypse for easy author tests

	Added experimental NONBLOCKING code, thanks ASCENT for the motivation!

0.14

	removed Test::* modules from dependency list, thanks BINGOS - RT #36725

	dos2unix fixes - thanks RT #36704

	added Build.PL

0.13
